# spots-api

./: .env  Cargo.toml  diesel.toml  docker-compose.yaml
migrations/2022-05-22-223041_create_spots/: down.sql  up.sql
migrations/2022-05-28-221850_create_users/: up.sql
migrations/2022-05-30-233857_create_groups/: up.sql
migrations/2022-05-31-005540_create_group_users/: down.sql  up.sql
migrations/2022-06-07-030629_add_group_user_relation/: down.sql  up.sql
migrations/2022-06-11-172343_groups_add_owner_id/: down.sql  up.sql
src/: main.rs  routes.rs
src/auth/: guards.rs  login.rs  mod.rs  user.rs  utils.rs
src/db/: connection.rs  mod.rs  models.rs  schema.rs  setup.rs
src/db/models/: group.rs  group_user.rs  mod.rs  spot.rs  user.rs
src/routes/: groups.rs  mod.rs  spot.rs  users.rs
